plugins {
    id 'java-library'
    id 'jacoco'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    api project(':regelsuche-search')
    api project(':regelsuche-validation')
    api project(':regelsuche-discovery')
    api project(':regelsuche-math-algorithms')

    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

jacoco {
    toolVersion = '0.8.13'
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

def historicalRediscoveryReportDirectory = layout.buildDirectory.dir(
    'reports/historical-rediscovery')
def historicalWitnessPruningReportDirectory = layout.buildDirectory.dir(
    'reports/historical-rediscovery-witness-pruning')
def historicalProductionSearchComparisonReportDirectory = layout.buildDirectory.dir(
    'reports/historical-rediscovery-production-search-comparison')
def historicalEqualWorkSearchComparisonReportDirectory = layout.buildDirectory.dir(
    'reports/historical-rediscovery-equal-work-search-comparison')
def historicalRewriteArchitectureDecisionReportDirectory = layout.buildDirectory.dir(
    'reports/historical-rewrite-architecture-decision')
def representationMatchedWorkReportDirectory = layout.buildDirectory.dir(
    'reports/representation-matched-work')
def symPyRuleAmplificationReportDirectory = layout.buildDirectory.dir(
    'reports/sympy-rule-amplification')
def polynomialTheoryUtilityCaseCorpusReportDirectory =
    layout.buildDirectory.dir('reports/polynomial-theory-utility-case-corpus')
def historicalRediscoveryOutputArgument =
    historicalRediscoveryReportDirectory.map { it.asFile.absolutePath }
def historicalRewriteArchitectureDecisionInputs = [
    historicalRediscoveryReportDirectory.map {
        it.file('historical-rediscovery-run.json')
    },
    historicalRediscoveryReportDirectory.map {
        it.file('historical-rediscovery-atlas.json')
    },
    historicalWitnessPruningReportDirectory.map {
        it.file('witness-pruning-diagnostic.json')
    },
    historicalProductionSearchComparisonReportDirectory.map {
        it.file('production-search-comparison.json')
    },
    historicalEqualWorkSearchComparisonReportDirectory.map {
        it.file('equal-work-search-comparison.json')
    }
]
def historicalRepositoryRevision = providers.environmentVariable('GITHUB_SHA')
    .map { value ->
        if (!(value ==~ /[0-9a-f]{40}/)) {
            throw new GradleException(
                'GITHUB_SHA must be a lowercase 40-character commit SHA')
        }
        value
    }
    .orElse('WORKTREE')
def repositoryRootDirectory = rootProject.layout.projectDirectory
def bridgeCheckoutStatus = providers.exec {
    workingDir repositoryRootDirectory.asFile
    commandLine 'git', 'status', '--porcelain', '--untracked-files=normal'
}.standardOutput.asText.map { value -> value.trim() }
def bridgeCheckoutRevision = providers.exec {
    workingDir repositoryRootDirectory.asFile
    commandLine 'git', 'rev-parse', 'HEAD'
}.standardOutput.asText.map { value -> value.trim() }
def cleanBridgeCheckoutRevision = bridgeCheckoutStatus.flatMap { status ->
    if (!status.isEmpty()) {
        throw new GradleException(
            'Cannot bind SymPy rule-amplification evidence to a dirty checkout')
    }
    bridgeCheckoutRevision
}
def symPyRuleAmplificationRevision = providers
    .gradleProperty('regelsucheRepositoryRevision')
    .orElse(providers.environmentVariable(
        'REGELSUCHE_AUTHORITY_GITHUB_SHA'))
    .orElse(providers.environmentVariable('GITHUB_SHA'))
    .orElse(cleanBridgeCheckoutRevision)
    .map { value ->
        def revision = value.trim()
        if (!(revision ==~ /[0-9a-f]{40}/)) {
            throw new GradleException(
                'SymPy rule-amplification revision must be a lowercase '
                    + '40-character Git commit SHA')
        }
        revision
    }

def generateHistoricalRediscoveryAtlas = tasks.register(
    'generateHistoricalRediscoveryAtlas', JavaExec) {
    group = 'verification'
    description = 'Executes the frozen historical atlas and all derived search diagnostics from one atlas run.'
    dependsOn tasks.named('classes')
    timeout = java.time.Duration.ofMinutes(10)
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'de.regelsuche.benchmark.HistoricalRediscoveryReportPipeline'
    argumentProviders.add({
        ['historical-rediscovery', historicalRediscoveryOutputArgument.get()]
    } as CommandLineArgumentProvider)
    inputs.file(layout.projectDirectory.file(
        'src/main/resources/de/regelsuche/benchmark/historical-rediscovery-corpus.json'))
    outputs.dir(historicalRediscoveryReportDirectory)
    outputs.dir(historicalWitnessPruningReportDirectory)
    outputs.dir(historicalProductionSearchComparisonReportDirectory)
    outputs.dir(historicalEqualWorkSearchComparisonReportDirectory)
    doLast {
        def production = historicalProductionSearchComparisonReportDirectory.get()
            .file('production-search-comparison.json').asFile
        if (!production.isFile()) {
            throw new GradleException('Missing production-search comparison artifact')
        }
        def equalWork = historicalEqualWorkSearchComparisonReportDirectory.get()
            .file('equal-work-search-comparison.json').asFile
        if (!equalWork.isFile()) {
            throw new GradleException('Missing equal-work search comparison artifact')
        }
    }
}

def generateHistoricalRewriteArchitectureDecision = tasks.register(
    'generateHistoricalRewriteArchitectureDecision', JavaExec) {
    group = 'verification'
    description = 'Derives the evidence-bound rewrite architecture decision from retained historical diagnostics.'
    dependsOn generateHistoricalRediscoveryAtlas
    dependsOn tasks.named('testClasses')
    timeout = java.time.Duration.ofMinutes(1)
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'de.regelsuche.benchmark.HistoricalRewriteArchitectureDecision'
    argumentProviders.add({
        [
            'rewrite-architecture-decision',
            historicalRepositoryRevision.get()
        ] + historicalRewriteArchitectureDecisionInputs.collect {
            it.get().asFile.absolutePath
        } + [historicalRewriteArchitectureDecisionReportDirectory.get()
            .asFile.absolutePath]
    } as CommandLineArgumentProvider)
    inputs.property('repositoryRevision', historicalRepositoryRevision)
    inputs.files(historicalRewriteArchitectureDecisionInputs)
    outputs.dir(historicalRewriteArchitectureDecisionReportDirectory)
    doLast {
        def decision = historicalRewriteArchitectureDecisionReportDirectory.get()
            .file('rewrite-architecture-decision.json').asFile
        if (!decision.isFile()) {
            throw new GradleException('Missing rewrite architecture decision artifact')
        }
    }
}

def representationMatchedWork = tasks.register(
    'representationMatchedWork', JavaExec) {
    group = 'verification'
    description = 'Executes the frozen exact representation-versus-direct matched-work experiment.'
    dependsOn tasks.named('classes')
    timeout = java.time.Duration.ofMinutes(1)
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'de.regelsuche.benchmark.RepresentationMatchedWorkExperiment'
    argumentProviders.add({
        [representationMatchedWorkReportDirectory.get().asFile.absolutePath]
    } as CommandLineArgumentProvider)
    inputs.property(
        'configurationId',
        'representation-rref-v1-vs-direct-scalar-elimination-v1')
    inputs.property('totalBudgetPerRoute', 200000)
    outputs.dir(representationMatchedWorkReportDirectory)
    doLast {
        def json = representationMatchedWorkReportDirectory.get()
            .file('matched-work-report.json').asFile
        def markdown = representationMatchedWorkReportDirectory.get()
            .file('matched-work-report.md').asFile
        if (!json.isFile() || !markdown.isFile()) {
            throw new GradleException(
                'Missing representation matched-work report artifacts')
        }
    }
}

def symPyRuleAmplification = tasks.register(
    'symPyRuleAmplification', JavaExec) {
    group = 'verification'
    description = 'Measures coordinated direct and bounded-prepared applicability across three unchanged imported SymPy rule families.'
    dependsOn tasks.named('classes')
    timeout = java.time.Duration.ofMinutes(1)
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'de.regelsuche.benchmark.SymPyRuleAmplificationExperiment'
    argumentProviders.add({
        [
            symPyRuleAmplificationRevision.get(),
            symPyRuleAmplificationReportDirectory.get().asFile.absolutePath
        ]
    } as CommandLineArgumentProvider)
    inputs.property('repositoryRevision', symPyRuleAmplificationRevision)
    inputs.property(
        'configurationId',
        'sympy-three-family-safe-preparation-matrix-v2')
    outputs.dir(symPyRuleAmplificationReportDirectory)
    doLast {
        def json = symPyRuleAmplificationReportDirectory.get()
            .file('sympy-rule-amplification.json').asFile
        def markdown = symPyRuleAmplificationReportDirectory.get()
            .file('sympy-rule-amplification.md').asFile
        if (!json.isFile() || !markdown.isFile()) {
            throw new GradleException(
                'Missing SymPy rule-amplification report artifacts')
        }
    }
}

def freezePolynomialTheoryUtilityCaseCorpus = tasks.register(
    'freezePolynomialTheoryUtilityCaseCorpus', JavaExec) {
    group = 'verification'
    description = 'Exports the target-blind polynomial utility formation corpus without opening or copying sealed qualification data.'
    dependsOn tasks.named('classes')
    timeout = java.time.Duration.ofMinutes(1)
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'de.regelsuche.benchmark.polynomial.PolynomialTheoryUtilityCaseCorpus'
    argumentProviders.add({
        [polynomialTheoryUtilityCaseCorpusReportDirectory.get()
            .asFile.absolutePath]
    } as CommandLineArgumentProvider)
    inputs.file(layout.projectDirectory.file(
        'src/main/resources/de/regelsuche/benchmark/polynomial/'
            + 'polynomial-theory-utility-formation-corpus-v1.json'))
    outputs.file(polynomialTheoryUtilityCaseCorpusReportDirectory.map {
        it.file('polynomial-theory-utility-formation-corpus-v1.json')
    })
    doLast {
        def formation = polynomialTheoryUtilityCaseCorpusReportDirectory.get()
            .file('polynomial-theory-utility-formation-corpus-v1.json').asFile
        def qualification = polynomialTheoryUtilityCaseCorpusReportDirectory.get()
            .file('polynomial-theory-utility-qualification-corpus-v1.json').asFile
        if (!formation.isFile()) {
            throw new GradleException(
                'Missing polynomial utility formation corpus artifact')
        }
        if (qualification.exists()) {
            throw new GradleException(
                'Formation export exposed sealed polynomial qualification')
        }
    }
}

tasks.named('check') {
    dependsOn tasks.named('jacocoTestReport')
    dependsOn generateHistoricalRewriteArchitectureDecision
    dependsOn representationMatchedWork
    dependsOn symPyRuleAmplification
    dependsOn freezePolynomialTheoryUtilityCaseCorpus
}

rootProject.tasks.named('check') {
    dependsOn generateHistoricalRewriteArchitectureDecision
    dependsOn representationMatchedWork
    dependsOn symPyRuleAmplification
    dependsOn freezePolynomialTheoryUtilityCaseCorpus
}
